Build: Update to red panda jpl

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@ build
 .project
 .settings/	
 .classpath
+
+# Fastlane
+/.gem
+/.gradle
+
+/Dockerfile
+/ci-scripts/.*
+
+# fastlane result
+fastlane/report.xml
